--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -337,9 +337,27 @@ if (APPLE)
   find_program(BREW brew)
 endif ()
 
-################################################################################
-## ROCKSDB
-################################################################################
+# ------------------------------------------------------------------------------
+# JEMALLOC
+# ------------------------------------------------------------------------------
+
+if (USE_JEMALLOC)
+  add_subdirectory(3rdParty/jemalloc)
+  add_definitions("-DARANGODB_HAVE_JEMALLOC=1")
+
+  set(JEMALLOC_HOME "${CMAKE_CURRENT_BINARY_DIR}/3rdParty/jemalloc/${JEMALLOC_VERSION}")
+
+  include_directories("${JEMALLOC_HOME}/include")
+  link_directories("${JEMALLOC_HOME}/lib")
+
+  set(SYS_LIBS ${SYS_LIBS} jemalloc.a)
+endif ()
+
+# ------------------------------------------------------------------------------
+# RocksDB
+# ------------------------------------------------------------------------------
+
+add_subdirectory(3rdParty/rocksdb)
 
 add_definitions(-DARANGODB_ROCKSDB_VERSION=\"${ROCKSDB_VERSION}\")
 include_directories(${ROCKSDB_INCLUDE_DIR})
@@ -596,54 +614,6 @@ if (NOT WINDOWS)
 
   if (NOT DARWIN)
     set(SYS_LIBS ${SYS_LIBS} rt)
-  endif ()
-endif ()
-
-# ------------------------------------------------------------------------------
-# JEMALLOC
-# ------------------------------------------------------------------------------
-
-set(USE_JEMALLOC_SYSTEM OFF)
-
-if (NOT USE_JEMALLOC_SYSTEM)
-  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/jemalloc)
-else ()
-  # try to detect a static libjemalloc.a:
-  set(_DEFAULT_LIBRARY_SUFFIXES ${CMAKE_FIND_LIBRARY_SUFFIXES})
-  set(CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX})
-  find_package(jemalloc)
-  set(CMAKE_FIND_LIBRARY_SUFFIXES ${_DEFAULT_LIBRARY_SUFFIXES})
-
-  # check whether we can use the static jemalloc on the system (if):
-  if (JEMALLOC_FOUND)
-    set(HAS_PROPER_STATIC_JEMALLOC TRUE)
-    set(SOURCE "#include <stdlib.h>
-#include <jemalloc/jemalloc.h>
-int main() {
-malloc_stats_print(NULL, NULL, NULL);
-return 0; }"
-      )
-    set(TSTSRC "${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/CMakeTmp/jemalloc.cxx")
-    file(WRITE ${TSTSRC} "${SOURCE}\n")
-
-    try_compile(HAS_PROPER_STATIC_JEMALLOC
-      ${CMAKE_BINARY_DIR}
-      ${TSTSRC}
-      LINK_LIBRARIES "jemalloc.a" "pthread" ${SYS_LIBS} ${CMAKE_DL_LIBS}
-      )
-    if (USE_JEMALLOC AND NOT HAS_PROPER_STATIC_JEMALLOC)
-      message(FATAL_ERROR "the static system jemalloc isn't suitable! Recompile with the current compiler or disable using `-DCMAKE_CXX_FLAGS=-no-pie -DCMAKE_C_FLAGS=-no-pie`")
-    elseif (NOT USE_JEMALLOC AND NOT HAS_PROPER_STATIC_JEMALLOC)
-      # the user didn't force the use, so if its broken, ignore its existance:
-      set(JEMALLOC_FOUND FALSE)
-    endif ()
-  endif()
-
-  if (USE_JEMALLOC AND NOT JEMALLOC_FOUND)
-    message(FATAL_ERROR "jemalloc build was requested but jemalloc not found")
-  elseif (USE_JEMALLOC AND JEMALLOC_FOUND)
-    add_definitions("-DARANGODB_HAVE_JEMALLOC=1")
-    set(SYS_LIBS ${SYS_LIBS} ${JEMALLOC_jemalloc_LIBRARY})
   endif ()
 endif ()
 
