--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3rdParty/jemalloc/jemalloc"]
 	path = 3rdParty/jemalloc/4.4.0
 	url = https://github.com/arangodb-helper/jemalloc.git
+[submodule "3rdParty/jemalloc/4.5.0"]
+	path = 3rdParty/jemalloc/4.5.0
+	url = https://github.com/arangodb-helper/jemalloc
