jemalloc cmake cleanup

--- a/3rdParty/rocksdb/CMakeLists.txt
+++ b/3rdParty/rocksdb/CMakeLists.txt
@@ -11,4 +11,12 @@ if (USE_JEMALLOC)
   set(JEMALLOC_LIB_RELEASE ${JEMALLOC_HOME}/lib/libjemalloc.a)
 endif ()
 
+set(USE_SNAPPY_DEFAULT 1)
+
+set(SNAPPY_HOME ${CMAKE_SOURCE_DIR}/3rdParty/snappy/google-snappy-d53de18/)
+set(SNAPPY_INCLUDE ${SNAPPY_HOME})
+list(APPEND SNAPPY_INCLUDE ${CMAKE_BINARY_DIR}/3rdParty/snappy/google-snappy-d53de18/)
+set(SNAPPY_LIB_DEBUG snappystatic)
+set(SNAPPY_LIB_RELEASE snappystatic)
+
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rocksdb)
