jemalloc with VM files

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -116,6 +116,7 @@ add_library(${LIB_ARANGO} STATIC
   ApplicationFeatures/ApplicationServer.cpp
   ApplicationFeatures/ConfigFeature.cpp
   ApplicationFeatures/GreetingsFeature.cpp
+  ApplicationFeatures/JemallocFeature.cpp
   ApplicationFeatures/LanguageFeature.cpp
   ApplicationFeatures/NonceFeature.cpp
   ApplicationFeatures/PageSizeFeature.cpp
