copy missing file

--- a/3rdParty/jemalloc/CMakeLists.txt
+++ b/3rdParty/jemalloc/CMakeLists.txt
@@ -6,10 +6,17 @@ set(JEMALLOC_VERSION "4.5.0")
 set(JEMALLOC_VERSION "${JEMALLOC_VERSION}" PARENT_SCOPE)
 
 file(
-  COPY 
+  COPY
     "${CMAKE_CURRENT_SOURCE_DIR}/${JEMALLOC_VERSION}"
   DESTINATION
     "${CMAKE_CURRENT_BINARY_DIR}"
+)
+
+file(
+  COPY
+    "${CMAKE_CURRENT_SOURCE_DIR}/arangodb-jemalloc.c"
+  DESTINATION
+    "${CMAKE_CURRENT_BINARY_DIR}/${JEMALLOC_VERSION}/src"
 )
 
 include(ExternalProject)
